--- a/css/style.css
+++ b/css/style.css
@@ -63,13 +63,12 @@ h1, h2 {
   list-style-type: none;  
 }
 #map {
-        height: 70%;
+        height: 55%;
         border-radius: 15px;
         width: 80%;
         margin: auto;
-        margin-top: 20px;
-        padding: 10px;
-              
+        margin-top: 10px;       
+        min-width: 150px;        
 }
 
       
@@ -143,7 +142,7 @@ strong {
   text-decoration: underline;
 }
 
-#Goals h2 {
+#goals h2 {
   text-align: center;
   font-size: 36px;
 }
@@ -155,12 +154,12 @@ strong {
 }
 
 footer {
-  bottom: 0px;
+  bottom: 0;
   text-align: center;
   padding: 10px 0;
   background-color: #333;
   color: white;
-  margin-top: 20px;
+  margin-top: 20px;   
 }
 
 footer em {
