--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,11 @@ h1, h2 {
    min-width: 150px;  
    position: fixed;   
 }
+body h2 {
+  text-align: center;
+  font-size: 24;
+}
+  
 
       
 html, body {
