--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ text-transform: uppercase;
   padding: 100px;
   background-color: #ffebf0;
   border-radius: 10px;
-  box-shadow: 0 2px 5px rgba(50, 50, 110, 100);
+  box-shadow: 0 2px 5px rgba(50, 50, 110, 90);
   list-style-type: none;  
 }
 #map {
@@ -70,11 +70,11 @@ text-transform: uppercase;
    margin:0 auto;       
    min-width: 150px;  
    position: fixed;  
-   box-shadow: 0 11px 15px rgba(50, 50, 110, 100);   
+   box-shadow: 0 11px 15px rgba(50, 50, 110, 90);   
 }
 body h2 {
   text-align: center;
-  font-size: 24;
+  font-size: 24px;
 }
   
 
@@ -90,7 +90,7 @@ section {
   padding: 10px;
   background-color: #ffebf0;
   border-radius: 10px;
-  box-shadow: 0 2px 5px rgba(50, 50, 110, 100);
+  box-shadow: 0 2px 5px rgba(50, 50, 110, 90);
   list-style-type: none;
 }
 
