--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ h1, h2 {
   color: black; 
 text-transform: uppercase;  
 }
+
  
 #States ul li, #States{
  font-size: 24px;
@@ -154,6 +155,66 @@ ul li, ol li {
   font-size: 14px;
   font-weight: bold;
   text-align: center;
+}
+
+.bx-wrapper {
+  position: relative;
+  margin-bottom: 60px;
+  padding: 10px;
+  touch-action: pan-y;
+}
+
+.bx-wrapper img {
+  max-width: 50%;
+  
+ 
+}
+
+.bxslider {
+  margin: 10px;
+  padding: 10px;
+  text-align: center;
+  border-radius: 50px;
+}
+
+ul.bxslider {
+  list-style: none;
+}
+
+.bx-wrapper .bx-pager,
+.bx-wrapper .bx-controls-auto {
+  position: absolute;
+  bottom: -30px;
+  width: 30%;
+  display: flex;
+  justify-content: center;
+}
+
+.bx-wrapper .bx-pager {
+  font-size: .85em;
+  font-family: Arial;
+  font-weight: bold;
+  color: #666;
+  padding-top: 20px;
+}
+
+
+.bx-wrapper .bx-prev {
+  left: 10px;
+}
+
+.bx-wrapper .bx-next {
+  right: 10px;
+}
+
+.bx-wrapper .bx-controls-direction a {
+  position: absolute;
+  top: 50%;
+  margin-top: -16px;
+  outline: 0;
+  width: 0px;
+  height: 0px;
+  text-indent: -9999px;
 }
 
 footer {
